erDiagram
    segni_zodiacali {
        int id PK
        varchar nome UK
        text descrizione
        int elemento_id FK
        enum modalita
        int pianeta_id FK
        int metallo_id FK
    }
    utenti {
        int id PK
        varchar username
        varchar email
        varchar password_hash
        enum ruolo
        int segno_zodiacale_id FK
        int ascendente_id FK
        int qi
        boolean email_verificata
        boolean attivo
        datetime data_registrazione
        datetime ultimo_accesso
    }
    %% transazioni_qi {
    %%     int id PK
    %%     int utente_id FK
    %%     enum tipo
    %%     int importo
    %%     varchar descrizione
    %%     datetime data_transazione
    %% }
    interpretazioni {
        int id PK
        int sogno_id FK
        text prompt
        text testo
        datetime scadenza_cache
        datetime data_creazione
    }
    %% like_post {
    %%     int utente_id PK_FK
    %%     int post_id PK_FK
    %%     datetime data_creazione
    %% }
    post {
        int id PK
        int utente_id FK
        int interpretazione_id FK
        text testo_visibile
        datetime data_pubblicazione
    }
    sogni {
        int id PK
        int utente_id FK
        text testo
        enum stato
        datetime scadenza_cache
        datetime data_creazione
    }
    inventari_cosmetici {
        int utente_id PK_FK
        int cosmetico_id PK_FK
        boolean equipaggiato
        datetime data_acquisto
    }
    cosmetici {
        int id PK
        varchar nome
        text descrizione
        int prezzo_qi
        varchar asset
        boolean attivo
    }
    metalli {
        int id PK
        varchar nome UK
        text descrizione
    }
    pianeti {
        int id PK
        varchar nome UK
        text descrizione
    }
    elementi {
        int id PK
        varchar nome UK
        text descrizione
    }
    temi_natali {
        int id PK
        int utente_id FK
        date data_nascita
        time ora_nascita
        varchar luogo_nascita
        decimal latitudine
        decimal longitudine
        varchar timezone
        json dati_calcolo
        datetime data_creazione
    }
    elementi ||--o{ segni_zodiacali : "elemento_id"
    pianeti ||--o{ segni_zodiacali : "pianeta_id"
    metalli ||--o{ segni_zodiacali : "metallo_id"
    segni_zodiacali ||--o{ utenti : "segno_zodiacale_id"
    segni_zodiacali ||--o{ utenti : "ascendente_id"
    utenti ||--o{ temi_natali : "utente_id"
    utenti ||--o{ sogni : "utente_id"
    sogni ||--o{ interpretazioni : "sogno_id"
    %% utenti ||--o{ transazioni_qi : "utente_id"
    utenti ||--o{ inventari_cosmetici : "utente_id"
    cosmetici ||--o{ inventari_cosmetici : "cosmetico_id"
    utenti ||--o{ post : "utente_id"
    interpretazioni ||--o{ post : "interpretazione_id"
    %% utenti ||--o{ like_post : "utente_id"
    %% post ||--o{ like_post : "post_id"
